<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/my_custom_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
		android:padding="5dp"
		android:textColor="@color/orange"
        android:textStyle="bold"
        android:text="@string/Heading"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/Introduction"
        android:textSize="25sp"
        android:textColor="@color/abc_search_url_text_holo"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Created"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:paddingRight="5dp"
        android:text="@string/Manas"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sibu"
        android:paddingRight="5dp"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold" />
    

</LinearLayout>
